TEST_PROGRAMS/INVALID/evan_vassallo/incorrectProg5.min
#operation character applied consecutively

var x: int;

x = x ++ 4;

